[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-server"
path = "src/server.rs"

[[bin]]
name = "mcp-client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
futures = "0.3.31"
http = { version = "1.3.1", optional = true }
oauth2 = "5.0.0"
paste = "1.0.15"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "stream",
], optional = true }
rmcp = { version = "0.2.1", features = ["transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sse-stream = { version = "0.2.1", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "process", "io-std"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
url = { version = "2.5.4", optional = true }

[features]
reqwest = ["dep:reqwest"]
sse-stream = ["dep:sse-stream"]
http = ["dep:http"]
url = ["dep:url"]
